--- a/wp-content/themes/watts/scss/_variables.scss
+++ b/wp-content/themes/watts/scss/_variables.scss
@@ -1,2 +1,23 @@
-$themePath: '/wp-content/themes/starter/';
+$themePath: '/wp-content/themes/watts/';
 
+
+// fonts
+
+$poppins:'Poppins', sans-serif;
+
+// reg 400, med 500, semibold 600, bold 700
+
+$unna:'Unna', serif;
+
+
+// colors 
+
+
+$greylight: #f2f2f2;
+$greydark:  #a1a0a9;
+
+$blueone: #1372f3;
+$bluetwo: #1b47c9;
+$bluegrad: linear-gradient(to right, #0750e0 0%,#1d3ec0 100%);
+
+$blackdark: 112238
