--- a/wp-content/themes/watts/scss/_variables.scss
+++ b/wp-content/themes/watts/scss/_variables.scss
@@ -20,4 +20,4 @@ $blueone: #1372f3;
 $bluetwo: #1b47c9;
 $bluegrad: linear-gradient(to right, #0750e0 0%,#1d3ec0 100%);
 
-$blackdark: 112238
+$bluedark: #112238;
