--- a/wp-content/themes/watts/scss/homepage/_section_one.scss
+++ b/wp-content/themes/watts/scss/homepage/_section_one.scss
@@ -92,6 +92,85 @@
 
 
 .sec_one_right {
-	flex-basis: 505px;
-	flex-shrink: 0;
+	width: 505px;
+	.free_consult_bar {
+		width:100%;
+		background: #1d3ec0;
+		text-align: center;
+		padding-top:27px;
+/*
+		display: flex;
+		justify-content: center;
+		align-items: center;
+*/
+		height:85px;
+		span, a {
+			color:#fff;
+			text-decoration: none;
+			display: inline-block;
+			margin:0 5px;
+		}
+		span {
+			font-family: $poppins;
+			font-weight: 700;
+			font-size:16px;
+			letter-spacing: 0.085em;
+			text-transform: lowercase;
+			
+		}
+		a {
+			font-family: $unna;
+			font-size:33px;
+		}
+	}
 }
+
+.sec_one_slide_wrapper {
+	text-align: center;
+}
+
+
+.sec_one_slider {
+	.sec_one_single_slide {
+		padding:68px 0 0 0;
+		img {
+			width:110px;
+			height:100px;
+		}
+		span {
+			display: block;
+			font-family: $poppins;
+		}
+		span.amount {
+			display: block;
+			
+			color:$bluedark;
+			font-size: 50px;
+			font-weight: 700;
+			margin:10px 0 0;
+		}
+		span.case_type {
+			color:$blueone;
+			text-transform: uppercase;
+			font-size:16px;
+			font-weight: 600;
+			letter-spacing: 0.27em;
+			margin:17px 0 37px;
+		}
+		span.info_title {
+			text-transform: lowercase;
+			color:$bluedark;
+			font-size:15px;
+			letter-spacing: 0.05em;
+			font-weight: 600;
+			margin-bottom:12px;
+		}
+		span.info_amount {
+			color:$greydark;
+			font-weight: 500;
+			font-size:22px;
+		}
+	}
+}
+
+
