--- a/wp-content/themes/watts/scss/homepage/_section_one.scss
+++ b/wp-content/themes/watts/scss/homepage/_section_one.scss
@@ -1,14 +1,23 @@
 #section_one {
 	display: flex;
 	position: relative;
+	height: 826px;
+}
+
+.fix_header_track {
+	width:83px;
 }
 
 
 .sec_one_left {
 	flex-grow:1;
+	position: relative;
+	
 	img {
 		object-fit:cover;
 		position: absolute;
+		width:100%;
+		height:100%;
 		top:0;
 		left:0;
 	}
@@ -17,7 +26,6 @@
 
 .sec_left_inner {
 	position: relative;
-	z-index: 1;
 	z-index: 1;
 	margin:31px 50px 0;
 	a.logo {
@@ -93,6 +101,10 @@
 
 .sec_one_right {
 	width: 505px;
+	flex-shrink: 0;
+	position: relative;
+	z-index: 1;
+	
 	.free_consult_bar {
 		width:100%;
 		background: #1d3ec0;
@@ -127,6 +139,7 @@
 
 .sec_one_slide_wrapper {
 	text-align: center;
+	padding:0 20px;
 }
 
 
@@ -136,6 +149,8 @@
 		img {
 			width:110px;
 			height:100px;
+			margin-left:auto;
+			margin-right:auto;
 		}
 		span {
 			display: block;
@@ -155,7 +170,7 @@
 			font-size:16px;
 			font-weight: 600;
 			letter-spacing: 0.27em;
-			margin:17px 0 37px;
+			margin:17px 0 39px;
 		}
 		span.info_title {
 			text-transform: lowercase;
@@ -163,14 +178,70 @@
 			font-size:15px;
 			letter-spacing: 0.05em;
 			font-weight: 600;
-			margin-bottom:12px;
+			margin-bottom:13px;
 		}
 		span.info_amount {
 			color:$greydark;
 			font-weight: 500;
 			font-size:22px;
+			margin-bottom:30px;
 		}
 	}
+}
+
+
+.sec_one_buttons {
+	width:160px;
+	height:66px;
+	background: $greylight;
+	display: flex;
+	padding:12px 0;
+	cursor: pointer;
+	margin:8px auto 45px;
+	.sec_one_button {
+		flex-basis: 50%;
+		display: flex !important;
+		justify-content: center;
+		align-items: center;
+		&:hover {
+			svg#arrow {
+				fill:$blueone;
+			}
+		}
+		svg {
+			width:23px;
+			height:23px;
+		}
+	}
+	.sec_one_button_left {
+		border-right:1px solid $blueone;
+		svg {
+			transform: rotate(-180deg);
+		}
+	}
+	.sec_one_button_right {
+		border-left:1px solid $blueone;
+	}
+}
+
+
+
+svg#arrow {
+	fill:$bluedark;
+	transition: all 200ms ease-in-out;
+}
+
+
+span.results_disclaimer {
+	font-family: $poppins;
+	font-weight:500;
+	color:$greydark;
+	font-size:13px;
+	line-height: 20px;
+	max-width:288px;
+	margin:0 auto;
+	display: block;
+	text-align: center;
 }
 
 
