--- a/wp-content/themes/watts/scss/_page-default.scss
+++ b/wp-content/themes/watts/scss/_page-default.scss
@@ -41,6 +41,19 @@
 
 
 
+@media screen and (max-width: 1130px) {
+	
+	
+	.internal_banner {
+		img {
+			width:100%;
+			left:0;
+		}
+	}
+	
+	
+} /* Media Query */
+
 
 	
 
