--- a/wp-content/themes/watts/scss/_global.scss
+++ b/wp-content/themes/watts/scss/_global.scss
@@ -32,6 +32,7 @@ img.aligncenter {
 h1,h2,h3,h4 {
 	font-style: normal;
 	font-weight: 300;
+	display: block;
 }
 
 
@@ -45,6 +46,134 @@ h1,h2,h3,h4 {
    color: $bluedark; }
  .gform_wrapper ul li ::-moz-placeholder {
     opacity: 1; }
+
+		
+		
+		a.button {
+			color:#fff;
+			display: inline-block;
+			transition: all 200ms ease-in-out;
+			font-size: 18px;
+			font-family: $poppins;
+			text-decoration: none;
+			font-weight: 700;
+			letter-spacing:0.08em;
+			padding:30px 32px;
+			position: relative;
+			text-transform: lowercase;
+			&:before {
+				content:"";
+				display: block;
+				position: absolute;
+				top:0;
+				left:0;
+				width:100%;
+				height:100%;
+				background: $bluegrad;
+				border-radius: 4px;
+				z-index:-1;
+			}
+			&:after {
+				content:"";
+				display: block;
+				position: absolute;
+				top:0;
+				left:0;
+				width:100%;
+				height:100%;
+				background: #fff;
+				border-radius: 4px;
+				opacity: 0;
+				transition: all 200ms ease-in-out;
+				z-index:-1;
+			}
+			&:hover {
+				color:#0a4edc;
+				&:after {
+					opacity: 1;
+				}
+			}
+		}
+
+
+
+
+.content {
+	color:#5b6372;
+	font-family: $poppins;
+	font-size:18px;
+	line-height: 35px;
+	h1 {
+		font-family: $poppins;
+		font-weight:700;
+		font-size:80px;
+		line-height: 90px;
+		margin-bottom: 68px;
+		background: linear-gradient(to right, #0750e0 0%,#1d3ec0 100%);
+		-webkit-background-clip: text;
+		-webkit-text-fill-color: transparent;
+	}
+	h2 {
+		color:$blueone;
+		font-size:25px;
+		letter-spacing: 0.035em;
+		font-weight: 600;
+		padding:25px 0 16px;
+	}
+	h3 {
+		color:$bluedark;
+		font-weight: 600;
+		line-height: 30px;
+		font-size: 21px;
+		padding:25px 0 20px;
+	}
+	p,ul,ol {
+		margin-bottom:24px;
+	}
+	ul {
+		list-style: none;
+		li {
+			padding-left:12px;
+			position: relative;
+			&:before {
+				content:"";
+				width:5px;
+				height:5px;
+				background: $bluetwo;
+				display: block;
+				position: absolute;
+				top:15px;
+				left:0;
+				border-radius: 50%;
+			}
+		}
+	}
+	a {
+		color:$blueone;
+		transition: all 200ms ease-in-out;
+		text-decoration: none;
+		display: inline-block;
+		position: relative;
+		&:after {
+			content:"";
+			display: block;
+			width:100%;
+			height:1px;
+			background: $blueone;
+			position: absolute;
+			bottom:6px;
+			left:0;
+			transition: all 200ms ease-in-out;
+		}
+		&:hover {
+			color:$bluedark;
+			&:after {
+				background: $bluedark;
+			}
+		}
+	}
+}
+
 
 
 
