--- a/wp-content/themes/watts/scss/_global.scss
+++ b/wp-content/themes/watts/scss/_global.scss
@@ -207,6 +207,16 @@ img.aligncenter {
 	max-width:100%;
 	height:auto;
 }
+
+
+
+.content {
+	h1 {
+		font-size: 40px;
+		line-height: 45px;
+		margin-bottom:40px;
+	}
+}
 	
 	
 	
