--- a/wp-content/themes/watts/scss/_page-default.scss
+++ b/wp-content/themes/watts/scss/_page-default.scss
@@ -210,8 +210,12 @@
 @media screen and (max-width: 1130px) {
 	
 	
+	body.page-template-default {
+	
 	.internal_banner {
 		display: none;
+	}
+	
 	}
 	
 	.one_col {
