--- a/wp-content/themes/watts/scss/_page-results.scss
+++ b/wp-content/themes/watts/scss/_page-results.scss
@@ -1,4 +1,4 @@
-body.page-template-template-caseresults {
+body.page-template-template-caseresults, body.page-template-template-testimonials {
 	#internal_main {
 		&:before {
 			content:"";
