--- a/wp-content/themes/watts/scss/_page-testimonials.scss
+++ b/wp-content/themes/watts/scss/_page-testimonials.scss
@@ -77,8 +77,9 @@
 	img.reviews_logo {
 		display: block;
 		margin:0 auto 32px;
-		max-width:100%;
-		height:75px;
+		width:100%;
+		height:auto;
+		max-width:300px;
 	}
 	span.reviews_description {
 		color:#000;
@@ -253,10 +254,69 @@
 
 @media screen and (max-width: 767px) {
 	
-	.reviews_wrapper {
-		display: block;
+	
+	.reviews_single_slide {
+    padding: 55px 0 74px;
+    span.reviews_description {
+	    font-size: 40px;
+			line-height: 47px;
+			max-width:520px;
+			margin-left:auto;
+			margin-right:auto;
+    }
 	}
 	
+	
+	.reviews_slider_inner {
+    min-height: 525px;
+   }
+   
+   .reviews_slider {
+	   padding-left:20px;
+	   padding-right:20px;
+   }
+	
+	
+	
+	.reviews_wrapper {
+		display: block;
+		padding-left:40px;
+		padding-right:40px;
+		margin: 76px auto;
+	}
+	
+	
+	.reviews_slider_wrapper {
+		margin: 43px 0 0;
+		padding: 58px 40px 0;
+		&:after {
+			height: 450px;
+		}
+	}
+	
+.review_col {
+	&:first-of-type {
+		.single_review {
+			&:last-of-type {
+				border-bottom:none;
+			}
+		}
+	}
+}
+
+.single_review {
+	padding: 50px 0;
+	min-height: 305px;
+}
+	
+	
+	
+	.reviews_slider_button {
+    height: 78px;
+    span.review_blue_line {
+	    top: 21px;
+    }
+   }
 	
 	
 	
